Fix overlapped calendar problem

--- a/src/components/movies/DateFilter/DateInput/DateInput.scss
+++ b/src/components/movies/DateFilter/DateInput/DateInput.scss
@@ -1,4 +1,5 @@
 .date-input-container {
+  z-index: 100;
   position: relative;
   display: flex;
   flex-direction: column;
